--- a/portfolio.html
+++ b/portfolio.html
@@ -32,17 +32,17 @@
             <nav class="header-nav">
               <ul class="header-nav__list">
                 <li class="header-nav__item">
-                  <a class="header-nav__link" href="./index.html">Студия</a>
+                  <a class="header-nav__link" href="./index.html">Студія</a>
                 </li>
                 <li class="header-nav__item">
                   <a
                     class="header-nav__link aclive-page current"
                     href="./portfolio.html"
-                    >Портфолио</a
+                    >Портфоліо</a
                   >
                 </li>
                 <li class="header-nav__item">
-                  <a class="header-nav__link" href="#">Контакты</a>
+                  <a class="header-nav__link" href="#">Контакти</a>
                 </li>
               </ul>
             </nav>
@@ -97,20 +97,21 @@
         <button
           class="menu-btn is-open js-open-menu"
           type="button"
-          aria-controls="mobile-nav"
           data-menu-button
         >
-          <svg width="24" height="16">
+          <svg
+            class="menu-svg"
+            width="24px"
+            height="16px"
+            aria-label="перемикач мобільного меню"
+          >
             <use
               class="icon-menu"
-              width="24"
-              height="16"
               href="./images/icon.svg#icon-close_24px"
             ></use>
-
             <use
               class="icon-cross"
-              href="./images/icon.svg#icon-menu_40px"
+              href="./images/icon.svg#icon-menu_40px-1"
             ></use>
           </svg>
         </button>
@@ -119,22 +120,20 @@
     <main>
       <section class="services">
         <div class="container">
-          <h1 class="visually-hidden">Услуги</h1>
+          <h1 class="visually-hidden">Послуги</h1>
           <ul class="services-list">
             <li class="services-list__item">
               <button type="button" class="services-list__btn karen-btn">
-                Все
+                Усі
               </button>
             </li>
             <li class="services-list__item">
               <button type="button" class="services-list__btn">
-                Веб-сайты
+                Веб-сайти
               </button>
             </li>
             <li class="services-list__item">
-              <button type="button" class="services-list__btn">
-                Приложения
-              </button>
+              <button type="button" class="services-list__btn">Додатки</button>
             </li>
             <li class="services-list__item">
               <button type="button" class="services-list__btn">Дизайн</button>
@@ -146,7 +145,7 @@
             </li>
           </ul>
 
-          <!-- карточки -->
+          <!-- картки -->
           <ul class="services-cards">
             <li class="services-cards__item">
               <a href="#" class="services-cards__link">
@@ -176,16 +175,16 @@
                     <img
                       class="project-description-translate__image"
                       src="./portfolioimg/crack.jpg"
-                      alt="Изображение сайта"
+                      alt="Зображення сайту"
                     />
                   </picture>
 
                   <div class="services-bgr">
                     <p class="services-bgr__text">
-                      Ресурс предлагает комплексные предложения с разным уровнем
-                      функционала и сервисов. Все это позволит посетителю
-                      получить исчерпывающие сведения о компании или частном
-                      лице.
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
                     </p>
                   </div>
                 </div>
@@ -228,10 +227,10 @@
                   </picture>
                   <div class="services-bgr">
                     <p class="services-bgr__text">
-                      Ресурс предлагает комплексные предложения с разным уровнем
-                      функционала и сервисов. Все это позволит посетителю
-                      получить исчерпывающие сведения о компании или частном
-                      лице.
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
                     </p>
                   </div>
                 </div>
@@ -276,10 +275,10 @@
                   </picture>
                   <div class="services-bgr">
                     <p class="services-bgr__text">
-                      Ресурс предлагает комплексные предложения с разным уровнем
-                      функционала и сервисов. Все это позволит посетителю
-                      получить исчерпывающие сведения о компании или частном
-                      лице.
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
                     </p>
                   </div>
                 </div>
@@ -287,7 +286,7 @@
                   <h2 class="services-poster__title">
                     Ресторан <span lang="en">Seafood</span>
                   </h2>
-                  <p class="services-poster__text">Приложение</p>
+                  <p class="services-poster__text">Додаток</p>
                 </div>
               </a>
             </li>
@@ -319,15 +318,15 @@
                     <img
                       class="project-description-translate__image"
                       src="./portfolioimg/headphones.jpg"
-                      alt="Наушники"
+                      alt="Навушники"
                     />
                   </picture>
                   <div class="services-bgr">
                     <p class="services-bgr__text">
-                      Ресурс предлагает комплексные предложения с разным уровнем
-                      функционала и сервисов. Все это позволит посетителю
-                      получить исчерпывающие сведения о компании или частном
-                      лице.
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
                     </p>
                   </div>
                 </div>
@@ -372,10 +371,10 @@
                   </picture>
                   <div class="services-bgr">
                     <p class="services-bgr__text">
-                      Ресурс предлагает комплексные предложения с разным уровнем
-                      функционала и сервисов. Все это позволит посетителю
-                      получить исчерпывающие сведения о компании или частном
-                      лице.
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
                     </p>
                   </div>
                 </div>
@@ -383,7 +382,7 @@
                   <h2 class="services-poster__title">
                     Проект <span lang="en">Boxes</span>
                   </h2>
-                  <p class="services-poster__text">Приложение</p>
+                  <p class="services-poster__text">Додаток</p>
                 </div>
               </a>
             </li>
@@ -420,10 +419,10 @@
                   </picture>
                   <div class="services-bgr">
                     <p class="services-bgr__text">
-                      Ресурс предлагает комплексные предложения с разным уровнем
-                      функционала и сервисов. Все это позволит посетителю
-                      получить исчерпывающие сведения о компании или частном
-                      лице.
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
                     </p>
                   </div>
                 </div>
@@ -468,10 +467,10 @@
                   </picture>
                   <div class="services-bgr">
                     <p class="services-bgr__text">
-                      Ресурс предлагает комплексные предложения с разным уровнем
-                      функционала и сервисов. Все это позволит посетителю
-                      получить исчерпывающие сведения о компании или частном
-                      лице.
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
                     </p>
                   </div>
                 </div>
@@ -516,10 +515,10 @@
                   </picture>
                   <div class="services-bgr">
                     <p class="services-bgr__text">
-                      Ресурс предлагает комплексные предложения с разным уровнем
-                      функционала и сервисов. Все это позволит посетителю
-                      получить исчерпывающие сведения о компании или частном
-                      лице.
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
                     </p>
                   </div>
                 </div>
@@ -564,10 +563,10 @@
                   </picture>
                   <div class="services-bgr">
                     <p class="services-bgr__text">
-                      Ресурс предлагает комплексные предложения с разным уровнем
-                      функционала и сервисов. Все это позволит посетителю
-                      получить исчерпывающие сведения о компании или частном
-                      лице.
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
                     </p>
                   </div>
                 </div>
@@ -575,7 +574,7 @@
                   <h2 class="services-poster__title" lang="en">
                     Growing Business
                   </h2>
-                  <p class="services-poster__text">Приложение</p>
+                  <p class="services-poster__text">Додаток</p>
                 </div>
               </a>
             </li>
@@ -594,7 +593,7 @@
               <ul class="footer-adress__list">
                 <li class="footer-adress__item--adress">
                   <a class="footer-adress__link--adress connection" href="#"
-                    >г. Киев, пр-т Леси Украинки, 26</a
+                    >м. Київ, пр-т Лесі Українки, 26</a
                   >
                 </li>
                 <li class="footer-adress__item">
@@ -615,7 +614,7 @@
             </address>
           </div>
           <div class="footer-social">
-            <p class="footer-social__text">присоединяйтесь</p>
+            <p class="footer-social__text">ПРИЄДНУЙТЕСЬ</p>
             <ul class="footer-social__list">
               <li class="footer-social__item">
                 <a class="footer-social__link" href="https://www.instagram.com/"
@@ -646,7 +645,7 @@
         </div>
         <div class="footer-input">
           <form class="footer-input__form">
-            <p class="footer-input__text">Подпишитесь на рассылку</p>
+            <p class="footer-input__text">ПІДПИШІТЬСЯ НА РОЗСИЛКУ</p>
             <div class="footer-subscribe">
               <input
                 class="footer-subscribe__input--mail"
@@ -659,7 +658,7 @@
               <button type="submit" class="footer-btn btn">
                 <svg class="footer-btn__svg" width="24" height="24">
                   <use href="./images/icon.svg#icon-telegram"></use></svg
-                >Подписаться
+                >Підписатись
               </button>
             </div>
           </form>
