--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
                   <a
                     class="header-nav__link aclive-page current"
                     href="./index.html"
-                    >Студия</a
+                    >Студія</a
                   >
                 </li>
                 <li class="header-nav__item">
                   <a class="header-nav__link" href="./portfolio.html"
-                    >Портфолио</a
+                    >Портфоліо</a
                   >
                 </li>
                 <li class="header-nav__item">
-                  <a class="header-nav__link" href="#">Контакты</a>
+                  <a class="header-nav__link" href="#">Контакти</a>
                 </li>
               </ul>
             </nav>
@@ -106,7 +106,7 @@
             class="menu-svg"
             width="24px"
             height="16px"
-            aria-label="переключатель мобильного меню"
+            aria-label="перемикач мобільного меню"
           >
             <use
               class="icon-menu"
@@ -123,15 +123,15 @@
     <main>
       <section class="hero hero__overlane">
         <div class="container hero__cont">
-          <h1 class="hero__title">Эффективные решения для вашего бизнеса</h1>
+          <h1 class="hero__title">Єфективні рішення для вашого бізнесу</h1>
           <button class="hero__btn" type="button" data-modal-open>
-            Заказать услугу
+            Замовити послугу
           </button>
         </div>
       </section>
       <section class="about section">
         <div class="container">
-          <h2 class="visually-hidden">Наши преимущества</h2>
+          <h2 class="visually-hidden">Наші переваги</h2>
           <ul class="list-slogan">
             <li class="list-slogan__content">
               <div class="list-slogan__card">
@@ -139,10 +139,10 @@
                   <use href="./images/icon.svg#icon-antenna-1"></use>
                 </svg>
               </div>
-              <h3 class="list-slogan__title">Внимание к деталям</h3>
+              <h3 class="list-slogan__title">УВАГА ДО ДЕТАЛЕЙ</h3>
               <p class="list-slogan__text">
-                Идейные соображения, а также начало повседневной работы по
-                формированию позиции.
+                Ідейні міркування, і навіть початок повсякденної роботи з
+                формування позиції.
               </p>
             </li>
             <li class="list-slogan__content">
@@ -151,10 +151,10 @@
                   <use href="./images/icon.svg#icon-clock-1"></use>
                 </svg>
               </div>
-              <h3 class="list-slogan__title">Пунктуальность</h3>
+              <h3 class="list-slogan__title">ПУНКТУАЛЬНІСТЬ</h3>
               <p class="list-slogan__text">
-                Задача организации, в особенности же рамки и место обучения
-                кадров влечет за собой.
+                Завдання організації, особливо рамки і місце навчання кадрів
+                тягне у себе..
               </p>
             </li>
             <li class="list-slogan__content">
@@ -163,10 +163,9 @@
                   <use href="./images/icon.svg#icon-diagram-1"></use>
                 </svg>
               </div>
-              <h3 class="list-slogan__title">Планирование</h3>
+              <h3 class="list-slogan__title">ПЛАНУВАННЯ</h3>
               <p class="list-slogan__text">
-                Равным образом консультация с широким активом в значительной
-                степени обуславливает.
+                Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
             <li class="list-slogan__content">
@@ -175,10 +174,10 @@
                   <use href="./images/icon.svg#icon-astronaut-1"></use>
                 </svg>
               </div>
-              <h3 class="list-slogan__title">Современные технологии</h3>
+              <h3 class="list-slogan__title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
               <p class="list-slogan__text">
-                Значимость этих проблем настолько очевидна, что реализация
-                плановых заданий.
+                Значимість цих проблем настільки очевидна, що реалізація
+                планових завдань.
               </p>
             </li>
           </ul>
@@ -186,7 +185,7 @@
       </section>
       <section class="work section">
         <div class="container">
-          <h2 class="caption">Чем мы занимаемся</h2>
+          <h2 class="caption">Чим ми займаємося</h2>
           <ul class="work__list">
             <li class="work__img">
               <img
@@ -199,7 +198,7 @@
                 alt="Компьютер"
                 width="370"
               />
-              <h3 class="work__overley">Десктопные приложения</h3>
+              <h3 class="work__overley">Десктопні додатки</h3>
             </li>
             <li class="work__img">
               <img
@@ -212,7 +211,7 @@
                 alt="Телефон"
                 width="370"
               />
-              <h3 class="work__overley">Мобильные приложения</h3>
+              <h3 class="work__overley">Мобільні додатки</h3>
             </li>
             <li class="work__img">
               <img
@@ -225,7 +224,7 @@
                 alt="Планшет"
                 width="370"
               />
-              <h3 class="work__overley">Дизайнерские решения</h3>
+              <h3 class="work__overley">Дизайнерські рішення</h3>
             </li>
           </ul>
         </div>
@@ -260,7 +259,7 @@
                 <img src="././images/team/Igor.jpg" alt="Игорь" />
               </picture>
               <div class="list-staff__content">
-                <h3 class="list-staff__caption">Игорь Демьяненко</h3>
+                <h3 class="list-staff__caption">Ігор Дем'яненко</h3>
                 <p class="list-staff__desc">Product Designer</p>
                 <ul class="list-social-media">
                   <li class="list-social-media__item">
@@ -336,7 +335,7 @@
                 <img src="./images/team/Olga.jpg" alt="Ольга" />
               </picture>
               <div class="list-staff__content">
-                <h3 class="list-staff__caption">Ольга Репина</h3>
+                <h3 class="list-staff__caption">Ольга Рєпіна</h3>
                 <p class="list-staff__desc">Frontend Developer</p>
                 <ul class="list-social-media">
                   <li class="list-social-media__item">
@@ -412,7 +411,7 @@
                 <img src="./images/team/Nikolay.jpg" alt="Николай" />
               </picture>
               <div class="list-staff__content">
-                <h3 class="list-staff__caption">Николай Тарасов</h3>
+                <h3 class="list-staff__caption">Микола Тарасов</h3>
                 <p class="list-staff__desc">Marketing</p>
                 <ul class="list-social-media">
                   <li class="list-social-media__item">
@@ -488,7 +487,7 @@
                 <img src="./images/team/Michael.jpg" alt="Николай" />
               </picture>
               <div class="list-staff__content">
-                <h3 class="list-staff__caption">Михаил Ермаков</h3>
+                <h3 class="list-staff__caption">Михайло Єрмаков</h3>
                 <p class="list-staff__desc">UI Designer</p>
                 <ul class="list-social-media">
                   <li class="list-social-media__item">
@@ -543,7 +542,7 @@
       </section>
       <section class="section-clients section">
         <div class="container">
-          <h2 class="caption">Постоянные клиенты</h2>
+          <h2 class="caption">Постійні клієнти</h2>
           <ul class="list-clients">
             <li class="list-clients__item">
               <a href="" class="list-clients__link">
@@ -602,7 +601,7 @@
               <ul class="footer-adress__list">
                 <li class="footer-adress__item--adress">
                   <a class="footer-adress__link--adress connection" href="#"
-                    >г. Киев, пр-т Леси Украинки, 26</a
+                    >м. Київ, пр-т Лесі Українки, 26</a
                   >
                 </li>
                 <li class="footer-adress__item">
@@ -623,7 +622,7 @@
             </address>
           </div>
           <div class="footer-social">
-            <p class="footer-social__text">присоединяйтесь</p>
+            <p class="footer-social__text">ПРИЄДНУЙТЕСЬ</p>
             <ul class="footer-social__list">
               <li class="footer-social__item">
                 <a class="footer-social__link" href="https://www.instagram.com/"
@@ -654,7 +653,7 @@
         </div>
         <div class="footer-input">
           <form class="footer-input__form">
-            <p class="footer-input__text">Подпишитесь на рассылку</p>
+            <p class="footer-input__text">ПІДПИШІТЬСЯ НА РОЗСИЛКУ</p>
             <div class="footer-subscribe">
               <input
                 class="footer-subscribe__input--mail"
@@ -667,7 +666,7 @@
               <button type="submit" class="footer-btn btn">
                 <svg class="footer-btn__svg" width="24" height="24">
                   <use href="./images/icon.svg#icon-telegram"></use></svg
-                >Подписаться
+                >Підписатись
               </button>
             </div>
           </form>
@@ -677,7 +676,7 @@
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <form class="form">
-          <p class="form__title">Оставьте свои данные, мы вам перезвоним</p>
+          <p class="form__title">Залиште свої дані, ми вам передзвонимо</p>
 
           <label class="form-label">
             <input
@@ -689,7 +688,7 @@
             <svg class="form-label__icon" width="18" height="18">
               <use href="./images/icon.svg#icon-person"></use>
             </svg>
-            <span class="form-label__text">Имя</span>
+            <span class="form-label__text">Ім'я</span>
           </label>
 
           <label class="form-label">
@@ -715,7 +714,7 @@
             <svg class="form-label__icon" width="18" height="18">
               <use href="./images/icon.svg#icon-mail"></use>
             </svg>
-            <span class="form-label__text">Почта</span>
+            <span class="form-label__text">Пошта</span>
           </label>
           <label class="form-label label-comment">
             <textarea
@@ -726,7 +725,7 @@
               rows="10"
               placeholder="Введите текст"
             ></textarea>
-            <span class="form-label__text">Комментарий</span>
+            <span class="form-label__text">Коментар</span>
           </label>
 
           <label class="label-checkbox">
@@ -740,14 +739,14 @@
               <use href="./images/icon.svg#icon-check"></use>
             </svg>
             <span class="label-checkbox__text"
-              >Соглашаюсь с рассылкой и принимаю
+              >Погоджуюсь з розсилкою та приймаю
               <a class="checkbox-text-decoration" href="#"
-                >Условия договора</a
+                >Умови договору</a
               ></span
             >
           </label>
 
-          <button type="submit" class="form-btn btn">Отправить</button>
+          <button type="submit" class="form-btn btn">Відправити</button>
         </form>
 
         <button class="modal-button" type="button" data-modal-close>
